fix (globals.css): update card style to display impactClass on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,6 @@
 
   .card {
     @apply rounded-lg shadow border p-4;
-    @apply border-gray-200 dark:border-gray-700;
   }
 
   .nav-fixed {
